try fix notebook for github display

--- a/ibm_labs/DS0103EN-1-1-1-From-Problem-to-Approach-v2.0.ipynb
+++ b/ibm_labs/DS0103EN-1-1-1-From-Problem-to-Approach-v2.0.ipynb
@@ -12,11 +12,11 @@
    "source": [
     "<img src = \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0103EN-SkillsNetwork/labs/Module%201/images/IDSNlogo.png\" width = 400>\n",
     "\n",
-    "# From Problem to Approach\n",
+    "<h1>From Problem to Approach</h1>\n",
     "\n",
     "Estimated time needed: **20** minutes\n",
     "\n",
-    "## Objectives\n",
+    "<h2>Objectives</h2>\n",
     "\n",
     "After completing this lab you will be able to:\n",
     "\n",
@@ -34,7 +34,7 @@
     }
    },
    "source": [
-    "## Table of Contents\n",
+    "<h2>Table of Contents</h2>\n",
     "\n",
     "<div class=\"alert alert-block alert-info\" style=\"margin-top: 20px\">\n",
     "\n",
@@ -1033,9 +1033,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1047,7 +1047,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.2"
   },
   "widgets": {
    "state": {},
