try fix github display

--- a/ibm_labs/DS0103EN-1-1-1-From-Problem-to-Approach-v2.0.ipynb
+++ b/ibm_labs/DS0103EN-1-1-1-From-Problem-to-Approach-v2.0.ipynb
@@ -10,30 +10,17 @@
     }
    },
    "source": [
-    "<img src = \"https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-DS0103EN-SkillsNetwork/labs/Module%201/images/IDSNlogo.png\" width = 400>\n",
-    "\n",
     "<h1>From Problem to Approach</h1>\n",
     "\n",
-    "Estimated time needed: **20** minutes\n",
+    "<p>Estimated time needed: **20** minutes</p>\n",
     "\n",
     "<h2>Objectives</h2>\n",
     "\n",
-    "After completing this lab you will be able to:\n",
+    "<p>After completing this lab you will be able to:\n",
     "\n",
     "-   Have a Business Understanding of case studies\n",
-    "-   Analytically approach problems\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
+    "-   Analytically approach problems\n",
+    "</p>\n",
     "<h2>Table of Contents</h2>\n",
     "\n",
     "<div class=\"alert alert-block alert-info\" style=\"margin-top: 20px\">\n",
