--- a/ibm_labs/Data Science Methodology/DS0103EN-2-2-1-From-Requirements-to-Collection-v2.0.ipynb
+++ b/ibm_labs/Data Science Methodology/DS0103EN-2-2-1-From-Requirements-to-Collection-v2.0.ipynb
@@ -473,9 +473,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -487,7 +487,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.2"
   },
   "widgets": {
    "state": {},
