--- a/ibm_labs/Data Science Methodology/DS0103EN-3-3-1-From-Understanding-to-Preparation-v2.0.ipynb
+++ b/ibm_labs/Data Science Methodology/DS0103EN-3-3-1-From-Understanding-to-Preparation-v2.0.ipynb
@@ -26754,9 +26754,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -26768,7 +26768,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.2"
   },
   "widgets": {
    "state": {},
