--- a/ibm_labs/Extracting Stock Data Using yfinance.ipynb
+++ b/ibm_labs/Extracting Stock Data Using yfinance.ipynb
@@ -879,9 +879,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -893,7 +893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
