add and update notebooks

--- a/ibm_labs/Extracting Stock Data Using yfinance.ipynb
+++ b/ibm_labs/Extracting Stock Data Using yfinance.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -153,46 +153,46 @@
       "text/plain": [
        "{'zip': '95014',\n",
        " 'sector': 'Technology',\n",
-       " 'fullTimeEmployees': 147000,\n",
-       " 'longBusinessSummary': 'Apple Inc. designs, manufactures, and markets smartphones, personal computers, tablets, wearables, and accessories worldwide. It also sells various related services. The company offers iPhone, a line of smartphones; Mac, a line of personal computers; iPad, a line of multi-purpose tablets; and wearables, home, and accessories comprising AirPods, Apple TV, Apple Watch, Beats products, HomePod, iPod touch, and other Apple-branded and third-party accessories. It also provides AppleCare support services; cloud services store services; and operates various platforms, including the App Store, that allow customers to discover and download applications and digital content, such as books, music, video, games, and podcasts. In addition, the company offers various services, such as Apple Arcade, a game subscription service; Apple Music, which offers users a curated listening experience with on-demand radio stations; Apple News+, a subscription news and magazine service; Apple TV+, which offers exclusive original content; Apple Card, a co-branded credit card; and Apple Pay, a cashless payment service, as well as licenses its intellectual property. The company serves consumers, and small and mid-sized businesses; and the education, enterprise, and government markets. It sells and delivers third-party applications for its products through the App Store. The company also sells its products through its retail and online stores, and direct sales force; and third-party cellular network carriers, wholesalers, retailers, and resellers. Apple Inc. was founded in 1977 and is headquartered in Cupertino, California.',\n",
+       " 'fullTimeEmployees': 100000,\n",
+       " 'longBusinessSummary': 'Apple Inc. designs, manufactures, and markets smartphones, personal computers, tablets, wearables, and accessories worldwide. It also sells various related services. In addition, the company offers iPhone, a line of smartphones; Mac, a line of personal computers; iPad, a line of multi-purpose tablets; AirPods Max, an over-ear wireless headphone; and wearables, home, and accessories comprising AirPods, Apple TV, Apple Watch, Beats products, HomePod, and iPod touch. Further, it provides AppleCare support services; cloud services store services; and operates various platforms, including the App Store that allow customers to discover and download applications and digital content, such as books, music, video, games, and podcasts. Additionally, the company offers various services, such as Apple Arcade, a game subscription service; Apple Music, which offers users a curated listening experience with on-demand radio stations; Apple News+, a subscription news and magazine service; Apple TV+, which offers exclusive original content; Apple Card, a co-branded credit card; and Apple Pay, a cashless payment service, as well as licenses its intellectual property. The company serves consumers, and small and mid-sized businesses; and the education, enterprise, and government markets. It distributes third-party applications for its products through the App Store. The company also sells its products through its retail and online stores, and direct sales force; and third-party cellular network carriers, wholesalers, retailers, and resellers. Apple Inc. was incorporated in 1977 and is headquartered in Cupertino, California.',\n",
        " 'city': 'Cupertino',\n",
-       " 'phone': '408-996-1010',\n",
+       " 'phone': '408 996 1010',\n",
        " 'state': 'CA',\n",
        " 'country': 'United States',\n",
        " 'companyOfficers': [],\n",
-       " 'website': 'http://www.apple.com',\n",
+       " 'website': 'https://www.apple.com',\n",
        " 'maxAge': 1,\n",
        " 'address1': 'One Apple Park Way',\n",
        " 'industry': 'Consumer Electronics',\n",
-       " 'ebitdaMargins': 0.31955,\n",
-       " 'profitMargins': 0.25004,\n",
-       " 'grossMargins': 0.41005,\n",
-       " 'operatingCashflow': 104414003200,\n",
-       " 'revenueGrowth': 0.364,\n",
-       " 'operatingMargins': 0.28788,\n",
-       " 'ebitda': 110934999040,\n",
-       " 'targetLowPrice': 125,\n",
+       " 'ebitdaMargins': 0.33890998,\n",
+       " 'profitMargins': 0.26579002,\n",
+       " 'grossMargins': 0.43019,\n",
+       " 'operatingCashflow': 112241000448,\n",
+       " 'revenueGrowth': 0.112,\n",
+       " 'operatingMargins': 0.309,\n",
+       " 'ebitda': 128217997312,\n",
+       " 'targetLowPrice': 157,\n",
        " 'recommendationKey': 'buy',\n",
-       " 'grossProfits': 104956000000,\n",
-       " 'freeCashflow': 80625876992,\n",
-       " 'targetMedianPrice': 160,\n",
-       " 'currentPrice': 145.86,\n",
-       " 'earningsGrowth': 1,\n",
-       " 'currentRatio': 1.062,\n",
-       " 'returnOnAssets': 0.19302,\n",
-       " 'numberOfAnalystOpinions': 39,\n",
-       " 'targetMeanPrice': 159.34,\n",
-       " 'debtToEquity': 210.782,\n",
-       " 'returnOnEquity': 1.27125,\n",
-       " 'targetHighPrice': 185,\n",
-       " 'totalCash': 61696000000,\n",
-       " 'totalDebt': 135491002368,\n",
-       " 'totalRevenue': 347155005440,\n",
-       " 'totalCashPerShare': 3.732,\n",
+       " 'grossProfits': 152836000000,\n",
+       " 'freeCashflow': 80153247744,\n",
+       " 'targetMedianPrice': 192,\n",
+       " 'currentPrice': 155.27,\n",
+       " 'earningsGrowth': 0.25,\n",
+       " 'currentRatio': 1.038,\n",
+       " 'returnOnAssets': 0.19875,\n",
+       " 'numberOfAnalystOpinions': 43,\n",
+       " 'targetMeanPrice': 191.7,\n",
+       " 'debtToEquity': 170.714,\n",
+       " 'returnOnEquity': 1.45567,\n",
+       " 'targetHighPrice': 215,\n",
+       " 'totalCash': 63913000960,\n",
+       " 'totalDebt': 122797998080,\n",
+       " 'totalRevenue': 378323009536,\n",
+       " 'totalCashPerShare': 3.916,\n",
        " 'financialCurrency': 'USD',\n",
-       " 'revenuePerShare': 20.61,\n",
-       " 'quickRatio': 0.887,\n",
-       " 'recommendationMean': 2,\n",
+       " 'revenuePerShare': 22.838,\n",
+       " 'quickRatio': 0.875,\n",
+       " 'recommendationMean': 1.9,\n",
        " 'exchange': 'NMS',\n",
        " 'shortName': 'Apple Inc.',\n",
        " 'longName': 'Apple Inc.',\n",
@@ -205,106 +205,107 @@
        " 'messageBoardId': 'finmb_24937',\n",
        " 'market': 'us_market',\n",
        " 'annualHoldingsTurnover': None,\n",
-       " 'enterpriseToRevenue': 7.158,\n",
+       " 'enterpriseToRevenue': 6.956,\n",
        " 'beta3Year': None,\n",
-       " 'enterpriseToEbitda': 22.399,\n",
-       " '52WeekChange': 0.33893287,\n",
+       " 'enterpriseToEbitda': 20.525,\n",
+       " '52WeekChange': 0.18945229,\n",
        " 'morningStarRiskRating': None,\n",
-       " 'forwardEps': 5.34,\n",
+       " 'forwardEps': 6.57,\n",
        " 'revenueQuarterlyGrowth': None,\n",
-       " 'sharesOutstanding': 16530199552,\n",
+       " 'sharesOutstanding': 16319399936,\n",
        " 'fundInceptionDate': None,\n",
        " 'annualReportExpenseRatio': None,\n",
        " 'totalAssets': None,\n",
-       " 'bookValue': 3.882,\n",
-       " 'sharesShort': 96355309,\n",
-       " 'sharesPercentSharesOut': 0.0058,\n",
+       " 'bookValue': 4.402,\n",
+       " 'sharesShort': 103292182,\n",
+       " 'sharesPercentSharesOut': 0.0063,\n",
        " 'fundFamily': None,\n",
-       " 'lastFiscalYearEnd': 1601078400,\n",
-       " 'heldPercentInstitutions': 0.59107,\n",
-       " 'netIncomeToCommon': 86801997824,\n",
-       " 'trailingEps': 5.108,\n",
+       " 'lastFiscalYearEnd': 1632528000,\n",
+       " 'heldPercentInstitutions': 0.59268004,\n",
+       " 'netIncomeToCommon': 100554997760,\n",
+       " 'trailingEps': 6.015,\n",
        " 'lastDividendValue': 0.22,\n",
-       " 'SandP52WeekChange': 0.33407593,\n",
-       " 'priceToBook': 37.573418,\n",
-       " 'heldPercentInsiders': 0.00068999996,\n",
-       " 'nextFiscalYearEnd': 1664150400,\n",
+       " 'SandP52WeekChange': -0.014484823,\n",
+       " 'priceToBook': 35.272606,\n",
+       " 'heldPercentInsiders': 0.00071000005,\n",
+       " 'nextFiscalYearEnd': 1695600000,\n",
        " 'yield': None,\n",
-       " 'mostRecentQuarter': 1624665600,\n",
-       " 'shortRatio': 1.14,\n",
-       " 'sharesShortPreviousMonthDate': 1623715200,\n",
-       " 'floatShares': 16513139929,\n",
-       " 'beta': 1.20729,\n",
-       " 'enterpriseValue': 2484884996096,\n",
+       " 'mostRecentQuarter': 1640390400,\n",
+       " 'shortRatio': 1.18,\n",
+       " 'sharesShortPreviousMonthDate': 1647302400,\n",
+       " 'floatShares': 16302468781,\n",
+       " 'beta': 1.187745,\n",
+       " 'enterpriseValue': 2631645003776,\n",
        " 'priceHint': 2,\n",
        " 'threeYearAverageReturn': None,\n",
        " 'lastSplitDate': 1598832000,\n",
        " 'lastSplitFactor': '4:1',\n",
        " 'legalType': None,\n",
-       " 'lastDividendDate': 1620345600,\n",
+       " 'lastDividendDate': 1643932800,\n",
        " 'morningStarOverallRating': None,\n",
-       " 'earningsQuarterlyGrowth': 0.932,\n",
-       " 'priceToSalesTrailing12Months': 6.9452977,\n",
-       " 'dateShortInterest': 1626307200,\n",
-       " 'pegRatio': 1.53,\n",
+       " 'earningsQuarterlyGrowth': 0.204,\n",
+       " 'priceToSalesTrailing12Months': 6.697751,\n",
+       " 'dateShortInterest': 1649894400,\n",
+       " 'pegRatio': 2.58,\n",
        " 'ytdReturn': None,\n",
-       " 'forwardPE': 27.314606,\n",
+       " 'forwardPE': 23.63318,\n",
        " 'lastCapGain': None,\n",
-       " 'shortPercentOfFloat': 0.0058,\n",
-       " 'sharesShortPriorMonth': 108937943,\n",
-       " 'impliedSharesOutstanding': None,\n",
+       " 'shortPercentOfFloat': 0.0063,\n",
+       " 'sharesShortPriorMonth': 111286790,\n",
+       " 'impliedSharesOutstanding': 0,\n",
        " 'category': None,\n",
        " 'fiveYearAverageReturn': None,\n",
-       " 'previousClose': 145.64,\n",
-       " 'regularMarketOpen': 144.38,\n",
-       " 'twoHundredDayAverage': 131.39738,\n",
-       " 'trailingAnnualDividendYield': 0.005733315,\n",
-       " 'payoutRatio': 0.16309999,\n",
+       " 'previousClose': 157.65,\n",
+       " 'regularMarketOpen': 156.71,\n",
+       " 'twoHundredDayAverage': 159.2963,\n",
+       " 'trailingAnnualDividendYield': 0.005486838,\n",
+       " 'payoutRatio': 0.1434,\n",
        " 'volume24Hr': None,\n",
-       " 'regularMarketDayHigh': 146.33,\n",
+       " 'regularMarketDayHigh': 158.03,\n",
        " 'navPrice': None,\n",
-       " 'averageDailyVolume10Day': 81709314,\n",
-       " 'regularMarketPreviousClose': 145.64,\n",
-       " 'fiftyDayAverage': 140.44176,\n",
-       " 'trailingAnnualDividendRate': 0.835,\n",
-       " 'open': 144.38,\n",
+       " 'averageDailyVolume10Day': 91832440,\n",
+       " 'regularMarketPreviousClose': 157.65,\n",
+       " 'fiftyDayAverage': 165.8368,\n",
+       " 'trailingAnnualDividendRate': 0.865,\n",
+       " 'open': 156.71,\n",
        " 'toCurrency': None,\n",
-       " 'averageVolume10days': 81709314,\n",
+       " 'averageVolume10days': 91832440,\n",
        " 'expireDate': None,\n",
        " 'algorithm': None,\n",
-       " 'dividendRate': 0.88,\n",
-       " 'exDividendDate': 1628208000,\n",
+       " 'dividendRate': 0.92,\n",
+       " 'exDividendDate': 1643932800,\n",
        " 'circulatingSupply': None,\n",
        " 'startDate': None,\n",
-       " 'regularMarketDayLow': 144.1101,\n",
+       " 'regularMarketDayLow': 154.59,\n",
        " 'currency': 'USD',\n",
-       " 'trailingPE': 28.555208,\n",
-       " 'regularMarketVolume': 64471899,\n",
+       " 'trailingPE': 25.8138,\n",
+       " 'regularMarketVolume': 68168979,\n",
        " 'lastMarket': None,\n",
        " 'maxSupply': None,\n",
        " 'openInterest': None,\n",
-       " 'marketCap': 2411094867968,\n",
+       " 'marketCap': 2533913264128,\n",
        " 'volumeAllCurrencies': None,\n",
        " 'strikePrice': None,\n",
-       " 'averageVolume': 83129557,\n",
-       " 'dayLow': 144.1101,\n",
-       " 'ask': 145.94,\n",
-       " 'askSize': 1300,\n",
-       " 'volume': 64471899,\n",
-       " 'fiftyTwoWeekHigh': 150,\n",
+       " 'averageVolume': 88743671,\n",
+       " 'dayLow': 154.59,\n",
+       " 'ask': 155.07,\n",
+       " 'askSize': 1000,\n",
+       " 'volume': 68168979,\n",
+       " 'fiftyTwoWeekHigh': 182.94,\n",
        " 'fromCurrency': None,\n",
-       " 'fiveYearAvgDividendYield': 1.29,\n",
-       " 'fiftyTwoWeekLow': 103.1,\n",
-       " 'bid': 145.95,\n",
+       " 'fiveYearAvgDividendYield': 1.1,\n",
+       " 'fiftyTwoWeekLow': 122.25,\n",
+       " 'bid': 154.95,\n",
        " 'tradeable': False,\n",
-       " 'dividendYield': 0.006,\n",
-       " 'bidSize': 800,\n",
-       " 'dayHigh': 146.33,\n",
-       " 'regularMarketPrice': 145.86,\n",
+       " 'dividendYield': 0.0058,\n",
+       " 'bidSize': 1100,\n",
+       " 'dayHigh': 158.03,\n",
+       " 'regularMarketPrice': 155.27,\n",
+       " 'preMarketPrice': 156.64,\n",
        " 'logo_url': 'https://logo.clearbit.com/apple.com'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +880,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -893,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
