--- a/ibm_labs/Data analysis with python/exploratory-data-analysis.ipynb
+++ b/ibm_labs/Data analysis with python/exploratory-data-analysis.ipynb
@@ -4814,9 +4814,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4828,7 +4828,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
