--- a/ibm_labs/Introduction to Pandas in Python.ipynb
+++ b/ibm_labs/Introduction to Pandas in Python.ipynb
@@ -1620,7 +1620,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1634,7 +1634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
