--- a/ibm_labs/Machine learning with Python/ML0101EN-RecSys-Content-Based-movies-py-v1.ipynb
+++ b/ibm_labs/Machine learning with Python/ML0101EN-RecSys-Content-Based-movies-py-v1.ipynb
@@ -2285,9 +2285,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2299,7 +2299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   },
   "widgets": {
    "state": {},
